# TOPAZ-CRM

./: .dockerignore  .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  README.md  dump.rdb  pyproject.toml
apps/api/src/: config.py  database.py  main.py
apps/api/src/api/: auth.py  enrollment.py  recognition.py  whatsapp.py
apps/api/src/repositories/: alert_repo.py  assignment_repo.py  customer_repo.py  embedding_repo.py  enrollment_repo.py  followup_repo.py  message_repo.py  salesperson_repo.py  visit_repo.py
apps/api/src/services/: intent.py  matching.py  templates.py  wa_webhook.py  wa_window.py
apps/api/src/tasks/: ai.py  celery_app.py  followup.py  pipeline.py  recognition.py  whatsapp.py
apps/api/tests/: README.md  conftest.py  requirements-dev.txt  rls_support.py  test_auth.py  test_enrollment_auth.py  test_intent.py  test_rls.py  test_templates.py  test_wa_webhook.py  test_wa_window.py
apps/dashboard/: .env.example  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/edge/: .env.example  README.md  pyproject.toml
apps/edge/src/: __init__.py  config.py  consent.py  cooldown.py  detector.py  main.py  poster.py  uploader.py
apps/prototype/: .env.example  README.md  pyproject.toml  requirements.txt
apps/prototype/src/: config.py  demo.py  enroll.py  web.py
apps/prototype/src/faces/: __init__.py  gallery.py  matching.py  recognizer.py
apps/prototype/src/notify/: __init__.py  aisensy.py  base.py  console.py  media.py  messages.py  twilio_whatsapp.py
apps/prototype/src/store/: visit_log.py
apps/prototype/tests/: conftest.py  test_gallery.py  test_matching.py  test_media.py  test_messages.py  test_notify_console.py  test_web_render.py
docs/: DEPLOYMENT.md  EXECUTION_PLAN.md  HANDOFF.md  HARDWARE_SPEC.md  META_VERIFICATION.md  MONOREPO.md  PROTOTYPE_PLAN.md
docs/phase2/: PLAN.md  SESSION_PROTOCOL.md  STATE.md
infra/: README.md  docker-compose.yml
scripts/: seed_primary_assignment.sh  wipe_test_data.sh
supabase/: config.toml
supabase/migrations/: 0001_extensions_and_enums.sql  0002_core_tables.sql  0003_indexes.sql  0004_functions_and_triggers.sql  0005_rls.sql  0006_visits_captured_at.sql  0007_unclaimed_queue.sql  0008_customer_alerts_muted.sql  0009_customer_interest_summary.sql  0010_alerts.sql
supabase/snippets/: Untitled query 101.sql  (+7 more)
(+62 files in other folders)
