[project]
name = "topaz-api"
version = "0.1.0"
description = "FastAPI backend — recognition endpoint + WhatsApp webhook + Celery tasks."
requires-python = ">=3.12"
dependencies = [
    "topaz-shared",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "celery[redis]>=5.4,<6.0",
    "pgvector>=0.3,<1.0",
    "httpx>=0.27,<1.0",
    "anthropic>=0.40,<1.0",
    "certifi>=2024.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
